--- a/index.html
+++ b/index.html
@@ -12,17 +12,34 @@
         <div class="avatar"></div>
         <h3 class="tozih1">شیما موسوی</h3>
         <p class="tozih2">فوق تخصص برنامه نویسی</p>
-        <div class="navlink">
-          <i class="fluent--person-20-filled"></i>
-          <h4>نمونه کار</h4>
+        <div class="social">
+          <a href="https://github.com/itsshima" target="_blank"
+            ><i class="pixel--instagram"></i
+          ></a>
+          <a href="https://github.com/itsshima" target="_blank"
+            ><i class="pixel--twitter"></i
+          ></a>
+          <a href="https://github.com/itsshima" target="_blank"
+            ><i class="basil--telegram-outline"></i
+          ></a>
         </div>
-        <div class="navlink">
-          <i class="fa6-solid--blog"></i>
-          <h4>وبلاگ</h4>
-        </div>
-        <div class="navlink">
-          <i class="gg--phone"></i>
-          <h4>تماس با ما</h4>
+        <div class="navlink-group">
+          <div class="navlink">
+            <i class="fluent--person-20-filled"></i>
+            <h4>نمونه کار</h4>
+          </div>
+          <div class="navlink">
+            <i class="fa6-solid--blog"></i>
+            <h4>وبلاگ</h4>
+          </div>
+          <div class="navlink">
+            <i class="pixel--folder-solid"></i>
+            <h4>سامینا مینا عه عه</h4>
+          </div>
+          <div class="navlink">
+            <i class="gg--phone"></i>
+            <h4>تماس با ما</h4>
+          </div>
         </div>
       </div>
       <div class="as credit">
@@ -30,6 +47,76 @@
         <h4>طراحی شده توسط شیما موسوی</h4>
       </div>
     </aside>
-    <div class="content"></div>
+    <div class="content">
+      <section>
+        <div class="line-title">
+          <div class="line"></div>
+          <div class="sec-title">
+            <h3>طراح قالب</h3>
+          </div>
+        </div>
+        <div class="sec-content">
+          <div>
+            <img src="images/2fe1f19339ed8e0048ca92377e96bece.jpg" alt="" />
+          </div>
+          <div class="sec-info">
+            <div class="sec-info-name">
+              <i class="ion--caret-back"></i>
+              <h4>نام و ناممم</h4>
+            </div>
+            <div class="sec-info-name">
+              <i class="ion--caret-back"></i>
+              <h4>حوزه تخصص</h4>
+            </div>
+            <div class="sec-info-name">
+              <i class="ion--caret-back"></i>
+              <h4>سمت حرفه ای</h4>
+            </div>
+            <div class="sec-info-name">
+              <i class="ion--caret-back"></i>
+              <h4>لتس گو تو د بیچ ایچ لتس گو گت اوی</h4>
+            </div>
+            <div class="sec-info-name">
+              <i class="ion--caret-back"></i>
+              <h4>عاوت عاف د اوردینری</h4>
+            </div>
+          </div>
+          <div class="sec-fav">
+            <div class="box1">
+              <i class="fluent--movies-and-tv-16-regular"></i>
+              <h5>فیلم: 485</h5>
+            </div>
+            <div class="box2">
+              <i class="mynaui--tv"></i>
+
+              <h5>اپیزود: 1600</h5>
+            </div>
+            <div class="box3">
+              <h5>کد: 2</h5>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="skills">
+        <div class="sec-title" style="margin-bottom: 20px">
+          <h3>مهارت های من</h3>
+        </div>
+        <div class="skill-box">
+          <h2>HTML</h2>
+          &nbsp;&nbsp;
+          <progress value="90" max="100"></progress>
+        </div>
+        <div class="skill-box">
+          <h2>CSS</h2>
+          &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+          <progress value="50" max="100"></progress>
+        </div>
+        <div class="skill-box">
+          <h2>JavaScript</h2>
+          &nbsp;
+          <progress value="2" max="100" style="color: brown"></progress>
+        </div>
+      </section>
+    </div>
   </body>
 </html>
